--- a/src/config.toml
+++ b/src/config.toml
@@ -1,4 +1,4 @@
-baseURL = "www.example.com"
+baseURL = "https://natuerlich-andrea.github.io"
 languageCode = "en-us"
 title = "Hugo Hero Theme"
 themesDir = "../.."
