--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.TOKEN }}
-          external_repository: natuerlich-andrea/natuerlich-andrea.github.io
+          external_repository: natuerlich-andrea/natuerlich-andrea.github.io/docs
           publish_dir: ./docs
           keep_files: true
           user_name: natuerlich-andrea
