--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.TOKEN }}
-          external_repository: natuerlich-andrea/natuerlich-andrea.github.io/docs
-          publish_dir: ./docs
+          external_repository: natuerlich-andrea/natuerlich-andrea.github.io
+          publish_dir: ./public
           keep_files: true
           user_name: natuerlich-andrea
           user_email: natuerlich-andrea@anfinema.de
